--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,11 @@
         "assets/fonts/bootstrap/*",
         "assets/javascripts/bootstrap.js"
       ]
-    }
+    },
+    "font-awesome": {
+      "main": [
+        "fonts/*"
+    ]
   },
   "devDependencies": {
     "chai": "^3.5.0",
